--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,13 @@
 
 		<h4>Radio</h4>
 		<ul>
-			<li>Température radio: {{ data.temp_repeater }}</li>
+			<li>Type de radio:</li>
+			<li>PTT hardware ou software:</li>
+			<li>ID DPMR réel:</li>
+			<li>ID DPMR simulé:</li>
+			<li>Température radio: {{ data.radio_temperature }}</li>
 			<li>Voltage radio: XX</li>
+			<li>Raw: {{ data.radio_raw }}</li>
 		</ul>
 		<h2>Actions</h2>
 		<ul>
